@@ -6700,7 +6700,7 @@ entries of $x$ (its determinant if it is indeed triangular).
 
 \fun{GEN}{Frobeniusform}{GEN V, long n} given the vector $V$ of elementary
 divisors for $M - x\text{Id}$, where $M$ is an $n\times n$ square matrix.
-Returns the Frobenius form of $M$. Used by \kbd{matfrobenius}.
+Returns the Frobenius form of $M$.
 
 \fun{int}{RgM_QR_init}{GEN x, GEN *pB, GEN *pQ, GEN *pL, long prec}
 QR-decomposition of a square invertible \typ{MAT} $x$ with real coefficients.
