@@ -2589,110 +2589,3 @@ ZM_snf_group(GEN H, GEN *newU, GEN *newUi)
   return D;
 }
 
-/***********************************************************************
- ****                                                               ****
- ****         Frobenius form and Jordan form of a matrix            ****
- ****                                                               ****
- ***********************************************************************/
-
-static long
-prod_degree(GEN V)
-{
-  long i, s=0, l = lg(V);
-  for (i=1; i<l; i++)
-  {
-    long d = degpol(gel(V,i));
-    if (d<0) return d;
-    s += d;
-  }
-  return s;
-}
-
-GEN
-Frobeniusform(GEN V, long n)
-{
-  long i, j, k;
-  GEN M = zeromatcopy(n,n);
-  for (k=1,i=1;i<lg(V);i++,k++)
-  {
-    GEN  P = gel(V,i);
-    long d = degpol(P);
-    if (k+d-1 > n) pari_err_PREC("matfrobenius");
-    for (j=0; j<d-1; j++, k++) gcoeff(M,k+1,k) = gen_1;
-    for (j=0; j<d; j++) gcoeff(M,k-j,k) = gneg(gel(P, 1+d-j));
-  }
-  return M;
-}
-
-static GEN
-build_frobeniusbc(GEN V, long n)
-{
-  long i, j, k, l, m = lg(V)-1;
-  GEN M = zeromatcopy(n,n), z = monomial(gen_m1, 1, 0); /* -x */
-  for (k=1,l=1+m,i=1;i<=m;i++,k++)
-  {
-    GEN  P = gel(V,i);
-    long d = degpol(P);
-    if (d <= 0) continue;
-    if (l+d-2 > n) pari_err_PREC("matfrobenius");
-    gcoeff(M,k,i) = gen_1;
-    for (j=1; j<d; j++,k++,l++)
-    {
-      gcoeff(M,k,l)   = z;
-      gcoeff(M,k+1,l) = gen_1;
-    }
-  }
-  return M;
-}
-
-static GEN
-build_basischange(GEN N, GEN U)
-{
-  long i, j, n = lg(N)-1;
-  GEN p2 = cgetg(n+1, t_MAT);
-  for (j = 1; j <= n; ++j)
-  {
-    pari_sp btop = avma;
-    GEN p3 = NULL;
-    for (i = 1; i <= n; ++i)
-    {
-      GEN Uij = gcoeff(U, i, j), z;
-      if (is_RgX(Uij, 0))
-        z = RgX_RgM_eval_col(Uij, N, i);
-      else
-        z = Rg_col_ei(Uij, n, i);
-      p3 = p3 ? RgC_add(p3, z):z;
-    }
-    gel(p2,j) = gerepileupto(btop, p3);
-  }
-  return p2;
-}
-
-GEN
-matfrobenius(GEN M, long flag, long v)
-{
-  pari_sp ltop=avma;
-  long n;
-  GEN D, A, N, B, R, M_x;
-  if (typ(M)!=t_MAT) pari_err_TYPE("matfrobenius",M);
-  if (v<0) v=0;
-  if (varncmp(gvar(M), v) <= 0) pari_err_PRIORITY("matfrobenius", M, "<=", v);
-  n = lg(M)-1;
-  if (n && lgcols(M)!=n+1) pari_err_DIM("matfrobenius");
-  M_x = RgM_Rg_add_shallow(M, monomial(gen_m1, 1, v));
-  if (flag<2)
-  {
-    D = matsnf0(M_x,6);
-    if (prod_degree(D) != n) pari_err_PREC("matfrobenius");
-    if (flag != 1) D = Frobeniusform(D, n);
-    return gerepileupto(ltop, D);
-  }
-  if (flag>2) pari_err_FLAG("matfrobenius");
-  A = matsnf0(M_x,3);
-  D = smithclean(RgM_diagonal_shallow(gel(A,3)));
-  if (prod_degree(D) != n) pari_err_PREC("matfrobenius");
-  N = Frobeniusform(D, n);
-  B = build_frobeniusbc(D, n);
-  R = build_basischange(N, RgM_mul(B,gel(A,1)));
-  return gerepilecopy(ltop, mkvec2(N,R));
-}
