@@ -81,8 +81,9 @@ BA 27- [libpari] ZpX_ZpXQ_liftroot, ZpX_ZpXQ_liftroot_ea
        ellformallog, ellformalexp, ellnonsingularmultiple, ellpadicheight,
        ellpadicheightmatrix, ellpadics2, ellpadiclog
 BA 30- [libpari] function FpX_powu
-BA 31- GP function ellpadicfrobenius
-   32- [libpari] funtcion RgX_normalize
+BA 31- GP functions ellpadicfrobenius, hyperellpadicfrobenius
+   32- [libpari] function RgX_normalize
+BA 33- much faster matfrobenius/minpoly(t_MAT)
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
